policies/tests/require-labels/resource-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: tenant-alpha
  labels:
    app.kubernetes.io/name: "my-app"
spec:
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
